# AutoKB

./: .env.example  .gitignore  README.md  api.py  config.yaml  langgraph.json  pyproject.toml
autokb/: __init__.py  agent.py  api.py  cli.py  requirements.txt
autokb/utils/: autokb_logging.py  generate_kb.py  nodes.py  schema.py  sqlite_db.py  state.py  tools.py
kb_output/: <Topic>.md
my_agent/: agent.py
my_agent/utils/: generate_kb.py  kbgen_logging.py  logging.py  nodes.py  schema.py  state.py  tools.py
tests/: test_agent.py  test_agents.py  test_api.py  test_generate_kb.py  test_kbgen_logging.py  test_nodes.py  test_tools.py
