[tool.poetry]
name = "AutoKB"
version = "0.1.0"
description = "LangGraph for automated knowledge base generation based on seed topic(s)"
authors = [
    "langchain-ai"
]
packages = [
    { include = "autokb" },
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain_anthropic = "^0.1.0"
langchain_core = "^0.2.0"
langchain_openai = "^0.1.0"
tavily-python = "^0.3.0"
langchain_community = "^0.2.0"
langsmith = "^0.1.0"
loguru = "^0.5.3"
rich = "^10.9.0"
tqdm = "^4.62.3"
langgraph-cli = "^0.1.50"
langfuse = "^2.43.3"
cachetools = "^5.4.0"
praw = "^7.7.1"
arxiv = "^2.1.3"
semanticscholar = "^0.8.4"
typer = {extras = ["all"], version = "^0.12.3"}
matplotlib = "^3.9.2"
networkx = "^3.3"
python-dotenv = "^1.0.1"
langchain-exa = "^0.1.0"
wikipedia = "^1.4.0"
wikibase-rest-api-client = "<0.2"
mediawikiapi = "^1.2"
duckduckgo-search = "^6.2.7"
pytrends = "^4.9.2"
stackapi = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
