[tool.poetry]
name = "autokb"
version = "0.1.0"
description = "Multi-agent LLM system for automatic knowledge base generation"
authors = [
    "wyattowalsh"
]
packages = [
    { include = "autokb" },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"